--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="example.lizardo.pokedexz.presentation.FirstFragment"
+        android:name="example.lizardo.pokedexz.presentation.HomeFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first"/>
     <fragment
